Graded Assignment 4 Part 1: Framework for Personal Portfolio Webpage.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,52 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
    <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <meta name="description" content="Personal Portfolio Webpage" />
+      <link rel="stylesheet" type="text/css" href="styles.css" />
+      <title>Brandi Gentry Personal Portfolio Page</title>
    </head>
    <body>
-      <!-- Write your HTML in this file! -->
+      <header class="header"><h1>Brandi Gentry</h1></header>
+      <nav id="navbar">
+         <a class="nav-link" href="#About-Me">About Me</a>
+         <a class="nav-link" href="#Experience">Experience</a>
+         <a class="nav-link" href="#Contact-Me">Contact</a>
+      </nav>
+      <main>
+      <section class="About-Me" id="About-Me"><h2>About Me</h2>
+         <div class="About-Me" id="Background">
+            <div id="img-div"><img id="image" src="file:///Users/brandigentry/Desktop/LaunchCode/graded-assignments/graded-assignment-4/HTML-Me-Something-Start/images/IMG_4259.JPG" alt="Brandi overjoyed attending Chief's Victory Parade 2024." /></div>
+            <article>Born and raised in Kansas City, Missouri I was destined to be a Royals and Chiefs fan.</article>
+         </div>
+         <div class="About-Me" id="Education"><h3>Education</h3>
+            <div><h4>Kansas State University (2015-2019)</h4></div>
+            <p>I attended Kansas State University beginning in 2015, and graduated in 2019 with a Bachelor of Science in Social Science and a minor in City Planning.</p>
+            <p>I enjoyed my time at KSU and stayed busy as a member of the Zeta Tau Alpha (&Zeta;&Tau;&Alpha;) sorority.</p>
+         </div>
+         <div class="About-Me" id="Hobbies"><h3>Hobbies</h3></div>
+            <p>In my free time I love spending time with my three dogs- Winston, Max, and Riley.</p>
+            <div id="img-div"><img id="image" src="file:///Users/brandigentry/Desktop/LaunchCode/graded-assignments/graded-assignment-4/HTML-Me-Something-Start/images/IMG_1909.HEIC" alt="Dogs"/></div>
+            <p>You can also find me working on string art projects for friends and family.</p>
+            <div id="img-div"><img id="image" src="file:///Users/brandigentry/Desktop/LaunchCode/graded-assignments/graded-assignment-4/HTML-Me-Something-Start/images/IMG_2701.HEIC" alt="String art" /></div>
+            <div id="img-div"><img id="image" src="file:///Users/brandigentry/Desktop/LaunchCode/graded-assignments/graded-assignment-4/HTML-Me-Something-Start/images/IMG_0738.HEIC" alt="String art" /></div>
+            <div id="img-div"><img id="image" src="file:///Users/brandigentry/Desktop/LaunchCode/graded-assignments/graded-assignment-4/HTML-Me-Something-Start/images/IMG_0481.JPG" alt="String art" /></div>
+         </section>
+      <section class="Experience" id="Experience"><h2>Experience</h2>
+         <div class="Experience" id="Skills"><h3>Skills</h3></div>
+            <p>My journey of learning Software Development began in 2023. When I stumbled upon freeCodeCamp my interest was piqued, and shortly after completing freeCodeCamp's "Responsive Web Design" program I discovered LaunchCode.</p>
+            <div>**Insert cool graphic/chart depicting my skill levels: Javacript, HTML, CSS**</div>
+         <div class="Experience" id="Projects"><h3>Projects</h3></div>
+            <p>Check out my freeCodeCamp Responsive Web Design Certification <a target="_blank" id="freecodecamp-link" href="https://www.freecodecamp.org/certification/fcc6b6b8b8c-234f-491c-9a0e-e228959c75c2/responsive-web-design">here.</a></p>
+            <div>**Insert links to various projects**</div>
+      </section>
+      </main>
+      <footer>
+         <section class="footer" id="Contact-Me"><h2>Contact me</h2>
+           <p>**Insert links to- LinkedIn, email, Insta?, twitter?**</p>
+         </section>
+      </footer>
    </body>
 </html>
+
