--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <title>Brandi Gentry Personal Portfolio Page</title>
    </head>
    <body>
-      <header class="header"><h1>Brandi Gentry</h1></header>
+      <header class="header" id="mainHeading"><h1>Brandi Gentry</h1></header>
       <nav id="navbar">
          <a class="nav-link" href="#About-Me">About Me</a>
          <a class="nav-link" href="#Experience">Experience</a>
@@ -35,7 +35,7 @@
          </section>
       <section class="Experience" id="Experience"><h2>Experience</h2>
          <div class="Experience" id="Skills"><h3>Skills</h3></div>
-            <p>My journey of learning Software Development began in 2023. When I stumbled upon freeCodeCamp my interest was piqued, and shortly after completing freeCodeCamp's "Responsive Web Design" program I discovered LaunchCode.</p>
+            <p id="testP" class="funParagraph">My journey of learning Software Development began in 2023. When I stumbled upon freeCodeCamp my interest was piqued, and shortly after completing freeCodeCamp's "Responsive Web Design" program I discovered LaunchCode.</p>
             <div>**Insert cool graphic/chart depicting my skill levels: Javacript, HTML, CSS**</div>
          <div class="Experience" id="Projects"><h3>Projects</h3></div>
             <p>Check out my freeCodeCamp Responsive Web Design Certification <a target="_blank" id="freecodecamp-link" href="https://www.freecodecamp.org/certification/fcc6b6b8b8c-234f-491c-9a0e-e228959c75c2/responsive-web-design">here.</a></p>
