Images fixed and now viewable

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <main>
       <section class="About-Me" id="About-Me"><h2>About Me</h2>
          <div class="About-Me" id="Background">
-            <div id="img-div"><img id="image" src="file:///Users/brandigentry/Desktop/LaunchCode/graded-assignments/graded-assignment-4/HTML-Me-Something-Start/images/IMG_4259.JPG" alt="Brandi overjoyed attending Chief's Victory Parade 2024." /></div>
+            <div id="img-div"><img id="personalimage" src="/images/IMG_4259.JPG" alt="Brandi overjoyed attending Chief's Victory Parade 2024." /></div>
             <article>Born and raised in Kansas City, Missouri I was destined to be a Royals and Chiefs fan.</article>
          </div>
          <div class="About-Me" id="Education"><h3>Education</h3>
@@ -27,11 +27,8 @@
          </div>
          <div class="About-Me" id="Hobbies"><h3>Hobbies</h3></div>
             <p>In my free time I love spending time with my three dogs- Winston, Max, and Riley.</p>
-            <div id="img-div"><img id="image" src="file:///Users/brandigentry/Desktop/LaunchCode/graded-assignments/graded-assignment-4/HTML-Me-Something-Start/images/IMG_1909.HEIC" alt="Dogs"/></div>
             <p>You can also find me working on string art projects for friends and family.</p>
-            <div id="img-div"><img id="image" src="file:///Users/brandigentry/Desktop/LaunchCode/graded-assignments/graded-assignment-4/HTML-Me-Something-Start/images/IMG_2701.HEIC" alt="String art" /></div>
-            <div id="img-div"><img id="image" src="file:///Users/brandigentry/Desktop/LaunchCode/graded-assignments/graded-assignment-4/HTML-Me-Something-Start/images/IMG_0738.HEIC" alt="String art" /></div>
-            <div id="img-div"><img id="image" src="file:///Users/brandigentry/Desktop/LaunchCode/graded-assignments/graded-assignment-4/HTML-Me-Something-Start/images/IMG_0481.JPG" alt="String art" /></div>
+            <div id="img-div"><img id="stringartimage" src="/images/IMG_0480.JPG" alt="String art" /></div>
          </section>
       <section class="Experience" id="Experience"><h2>Experience</h2>
          <div class="Experience" id="Skills"><h3>Skills</h3></div>
